修改铁砧锤cd实现